--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,17 +27,9 @@ import backgroundSvg from '../assets/background.svg';
       backgroundRepeat: 'no-repeat',
     })}
   >
-    <main
-      class={css({
-        width: '100%',
-        height: '100%',
-        backdropFilter: 'blur(100px)',
-        display: 'grid',
-        gridTemplateColumns: 'repeat(12, 1fr)',
-        gap: '3',
-      })}
-    >
-      <slot />
+    <slot name="header" />
+    <main>
+      <slot name="content" />
     </main>
   </body>
 </html>
